# conv-nn

./: .gitignore  Cargo.toml  LICENSE  README.md
models/: model.txt
src/: activation.rs  cnn.rs  conv_layers.rs  dense_layer.rs  layer.rs  lib.rs  main.rs  mnist_impl.rs  mxpl.rs  optimizer.rs  utils.rs
tests/: activation_test.rs  cnn_test.rs  conv_layers_test.rs  utils_test.rs
